# random-zombie-game

./: .editorconfig  .gitignore  LICENSE  README.md  cards.py  characters.py  loot.py  main.py  map.py  pyproject.toml
decks/: skills_survivor.json  test.json  weapon_baseballbat.json  weapon_pistol.json
i18n/: README.md
src/: campaign.py  cards.py  characters.py  display.py  encounter.py  loot.py  main.py  map.py
src/decks/: skills_survivor.json  weapon_baseballbat.json  weapon_katana.json  weapon_machete.json  weapon_pistol.json  weapon_shotgun.json
