[tool.poetry]
name = "random-zombie-game"
version = "0.1.0"
description = ""
authors = ["Rémi Canillas <remi.canillas@insa-lyon.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asciimatics = "*"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
